[package]
name = "tcpu"
version = "0.1.0"
authors = ["djade <djadenkus@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.3"
metrohash = "1.0.6"
rand_xoshiro = "0.4.0"
rand = "0.7.3"

[[bench]]
name = "bench"
harness = false
required-features = ["std"]

[features]
std = []
